Improve notes on dimensionality

--- a/lectures/lecture3.ipynb
+++ b/lectures/lecture3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline, k-Nearest Neighbours"
+    "# Baseline models & k-Nearest Neighbours"
    ]
   },
   {
@@ -17,8 +17,7 @@
     "- Explain the notion of similarity-based algorithms .\n",
     "- Broadly describe how KNNs use distances.\n",
     "- Discuss the effect of using a small/large value of the hyperparameter $K$ when using the KNN algorithm \n",
-    "- Describe the problem of the curse of dimensionality.\n",
-    "- Broadly describe the relation of `gamma` and `C` hyperparameters and the fundamental tradeoff."
+    "- Describe the problem of the curse of dimensionality."
    ]
   },
   {
@@ -1782,16 +1781,8 @@
     "\n",
     "We can only visualize data when the dimensions <= 3. \n",
     "\n",
-    "BUT, in ML, we usually deal with high-dimensional problems where examples are hard to visualize."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Dimensions≈20: Low dimensional \n",
-    "- Dimensions≈1000: Medium dimensional\n",
-    "- Dimensions≈100,000: High dimensional"
+    "BUT, in ML, we usually deal with high-dimensional problems where examples are hard to visualize.\n",
+    "High dimensional = 100s or 1000s of dimensions (roughly speaking, it depends on the specific problem at hands and the density of the data)."
    ]
   },
   {
@@ -4488,7 +4479,7 @@
    "source": [
     "### How to choose $K$ (`n_neighbors`)?\n",
     "\n",
-    "So we saw the model was overfitting with $k$=1 and  when $k$=100, the model was underfitting.\n",
+    "So we saw the model was overfitting with $k$=1 and  when $k$=90, the model was underfitting.\n",
     "\n",
     "So, the question is how do we pick $k$?\n",
     "\n",
@@ -4617,7 +4608,7 @@
     "\n",
     "for k in range(1, 50, 5):\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    scores = cross_validate(knn, cities_X_train, cities_y_train, cv=10, return_train_score = True)\n",
+    "    scores = cross_validate(knn, cities_X_train, cities_y_train, cv=10, return_train_score=True)\n",
     "    results_dict[\"n_neighbors\"].append(k)\n",
     "    results_dict[\"mean_cv_score\"].append(np.mean(scores[\"test_score\"]))\n",
     "    results_dict[\"mean_train_score\"].append(np.mean(scores[\"train_score\"]))\n",
@@ -4881,9 +4872,15 @@
     "\n",
     "In the previous module, we discussed one of the most important problems in machine learning which was overfitting.\n",
     "The second most important problem in machine learning is **the curse of dimensionality**.\n",
+    "This refers to that datasets with many many features generally have a sparser distribution of observations within this feature space,\n",
+    "since there are so many possible unique combinations of features.\n",
+    "This makes it both harder to detect the same general patterns between observations in the data\n",
+    "and easier to accidentally mistake \"noise\" (meaningless correlations) for general patterns.\n",
     "\n",
-    "If there are many irrelevant features, $k$-NN is hopelessly confused because all of them contribute to finding similarities between the observations.\n",
-    "With enough irrelevant features, the accidental similarity between features wipes out any meaningful similarity and $k$-NN is no better than random guessing."
+    "We will talk more later about what can be done to alleviate the curse of dimensionality,\n",
+    "but for now it is enough to know that many supervised ML algorithms, including k-NN,\n",
+    "can perform poorly when there are too high dimensionality in the data.\n",
+    "With enough irrelevant features, the accidental similarity between features wipes out any meaningful similarity and $k$-NN is no better than random guessing.\n"
    ]
   },
   {
