--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -1429,7 +1429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[15:47:13] WARNING: /home/conda/feedstock_root/build_artifacts/xgboost-split_1637426272325/work/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[13:14:50] WARNING: /home/conda/feedstock_root/build_artifacts/xgboost-split_1637426272325/work/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     }
    ],
@@ -3894,7 +3894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4243,7 +4243,7 @@
        "[21613 rows x 19 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4256,7 +4256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4433,7 +4433,7 @@
        "4    98074  47.6168 -122.045           1800        7503  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4445,7 +4445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4459,7 +4459,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4486,7 +4486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4495,7 +4495,7 @@
        "DecisionTreeRegressor(max_depth=3, random_state=1)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4517,7 +4517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4551,7 +4551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4632,7 +4632,7 @@
        "0    98178  47.5112 -122.257           1340        5650  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4643,7 +4643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4652,7 +4652,7 @@
        "array([269848.39378011])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4672,7 +4672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4682,7 +4682,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4702,7 +4702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4711,7 +4711,7 @@
        "0.6069320183816143"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4752,7 +4752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
@@ -5192,7 +5192,7 @@
        "CookiesandCream                 Both  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5204,10 +5204,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1.\n",
+    "X = candy_df.drop(columns='availability')\n",
+    "y = candy_df['availability']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.84"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2/3.\n",
+    "dt2 = DecisionTreeClassifier(min_samples_split=2)\n",
+    "dt2.fit(X, y)\n",
+    "dt2.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.72"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2/3.\n",
+    "dt5 = DecisionTreeClassifier(min_samples_split=5)\n",
+    "dt5.fit(X, y)\n",
+    "dt5.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2/3.\n",
+    "dt10 = DecisionTreeClassifier(min_samples_split=10)\n",
+    "dt10.fit(X, y)\n",
+    "dt10.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. In this example, the best performance on the training data is given when `min_samples_split=2`.\n",
+    "We don't know if this generalizes best to predicting unseen data,\n",
+    "and to find out we would need to evaluate the different hyperparameter values on a validation data set,\n",
+    "ideally using cross-validation, which we will talk about next lecture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. The fit stage is more computationally expensive since this is where the optimal feature splits are being computed.\n",
+    "The predict stage is using these already created rules to classify new points."
+   ]
   },
   {
    "cell_type": "markdown",
