--- a/lectures/lecture2.ipynb
+++ b/lectures/lecture2.ipynb
@@ -3695,7 +3695,7 @@
    "toc_window_display": true
   },
   "toc-autonumbering": false,
-  "toc-showmarkdowntxt": true
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
