Add notes on more sophisticated imputation methods

--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -13,26 +13,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing our libraries\n",
-    "import pandas as pd\n",
+    "# Importing common libraries that we have been using previously\n",
     "import altair as alt\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "from plot_classifier import plot_classifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.dummy import DummyClassifier, DummyRegressor\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
     "from sklearn.model_selection import cross_validate, train_test_split\n",
-    "\n",
-    "# import sys\n",
-    "# sys.path.append('code/')\n",
-    "# from display_tree import display_tree\n",
-    "from plot_classifier import plot_classifier\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Preprocessing and pipeline\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.metrics.pairwise import euclidean_distances\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder, StandardScaler, MinMaxScaler"
+    "from sklearn.metrics.pairwise import euclidean_distances"
    ]
   },
   {
@@ -3674,9 +3665,32 @@
     }
    ],
    "source": [
-    "knn = KNeighborsRegressor();\n",
+    "knn = KNeighborsRegressor()\n",
     "knn.fit(X_train_imp, y_train)\n",
     "knn.score(X_train_imp, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More sophisticated imputation methods\n",
+    "\n",
+    "Instead of using the most frequent label or an average of all the data when we impute,\n",
+    "we can try to use ML-techniques also for the imputation step.\n",
+    "For example,\n",
+    "we can use an average value from the rows that are the most similar to observation that have a missing value,\n",
+    "by first running a similarity ML-method such as kNN to determine which these rows are\n",
+    "(but note that this is still sensitive to rescaling of the data).\n",
+    "Instead of subsetting the data we can also use different regression methods\n",
+    "to build a function that uses all the existing features to predicted what the value of the missing feature should be.\n",
+    "These methods generally perform better than simple imputation that we use here,\n",
+    "but they also require more careful implementation and higher computational cost.\n",
+    "You can read more about them in these links:\n",
+    "\n",
+    "- https://scikit-learn.org/stable/modules/impute.html\n",
+    "- https://scikit-learn.org/stable/auto_examples/impute/plot_iterative_imputer_variants_comparison.html#sphx-glr-auto-examples-impute-plot-iterative-imputer-variants-comparison-py\n",
+    "- https://towardsdatascience.com/6-different-ways-to-compensate-for-missing-values-data-imputation-with-examples-6022d9ca0779"
    ]
   },
   {
@@ -4831,8 +4845,8 @@
    "metadata": {},
    "source": [
     "Build a pipeline named `bb_pipe` that: \n",
-    "1. Imputes using \"median\" as a strategy, \n",
-    "2. scale using `StandardScaler` \n",
+    "1. Imputes using \"mean\" as a strategy, \n",
+    "2. scale using `MinMaxScaler` \n",
     "3. builds a `KNeighborsClassifier`.\n",
     "\n",
     "\n",
@@ -4842,10 +4856,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipe = Pipeline([\n",
+    "        (\"imputer\", SimpleImputer(strategy=\"mean\")),\n",
+    "        (\"scaler\", MinMaxScaler()),\n",
+    "        (\"reg\", KNeighborsClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fit_time       0.002649\n",
+       "score_time     0.002171\n",
+       "test_score     0.873469\n",
+       "train_score    0.916327\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(cross_validate(pipe, X_train, y_train, return_train_score=True)).mean()"
+   ]
   },
   {
    "cell_type": "markdown",
