--- a/lectures/lecture4.ipynb
+++ b/lectures/lecture4.ipynb
@@ -590,7 +590,7 @@
     "\n",
     "$$ X = \\begin{bmatrix}5 & 2\\\\4 & 3\\\\  2 & 2\\\\ 10 & 10\\\\ 9 & -1\\\\ 9& 9\\end{bmatrix}, \\quad y = \\begin{bmatrix}0\\\\0\\\\1\\\\1\\\\1\\\\2\\end{bmatrix}.$$\n",
     "\n",
-    "If $k=3$, what would you predict for $x=\\begin{bmatrix} 0\\\\0\\end{bmatrix}$ if we were doing regression rather than classification?\n"
+    "If $k=3$, what would you predict for $x=\\begin{bmatrix} 0 & 0\\end{bmatrix}$ if we were doing regression rather than classification?\n"
    ]
   },
   {
@@ -600,7 +600,7 @@
     "```{admonition} Solutions!\n",
     ":class: dropdown\n",
     "\n",
-    "1. 1/3 ($\\frac{0 + 0 + 0}{3}$) \n",
+    "1. 1/3 ($\\frac{0 + 0 + 1}{3}$) \n",
     "```"
    ]
   },
