--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -55,13 +55,13 @@
     "- We will be using [Piazza](https://piazza.com/ubc.ca/winterterm22022/bait509ba12021w2) for discussions and questions.\n",
     "- Assessments:\n",
     "\n",
-    "| Assessment    | Due             | Weight |\n",
-    "| :---:         | :---:           | :---:  |\n",
-    "| Assignment 1  | Jan 12 at 23:59 | 20%    |\n",
-    "| Quiz          | Jan 19 at 23:59 | 10%    |\n",
-    "| Assignment 2  | Jan 24 at 23:59 | 20%    |\n",
-    "| Assignment 3  | Feb 2 at 23:59  | 20%    |\n",
-    "| Final Project | Feb 12 at 23:59 | 30%    |\n",
+    "| Assessment    | Due    | Weight |\n",
+    "| :---:         | :---:  | :---:  |\n",
+    "| Assignment 1  | Jan 18 | 20%    |\n",
+    "| Quiz          | Jan 24 | 10%    |\n",
+    "| Assignment 2  | Jan 26 | 20%    |\n",
+    "| Assignment 3  | Feb 2  | 20%    |\n",
+    "| Final Project | Feb 12 | 30%    |\n",
     "\n",
     "All assessments will be submitted via Canvas."
    ]
