--- a/lectures/lecture5.ipynb
+++ b/lectures/lecture5.ipynb
@@ -4676,9 +4676,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fit_time       1.004021\n",
+       "score_time     0.215132\n",
+       "test_score     0.798438\n",
+       "train_score    0.971875\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe = make_pipeline(\n",
     "    CountVectorizer(),\n",
@@ -4690,18 +4705,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-9c18be37-780d-4848-b914-3da7b75ae08b {color: black;background-color: white;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b pre{padding: 0;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-toggleable {background-color: white;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-estimator:hover {background-color: #d4ebff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-item {z-index: 1;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 2em;bottom: 0;left: 50%;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel-item {display: flex;flex-direction: column;position: relative;background-color: white;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-parallel-item:only-child::after {width: 0;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;position: relative;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-label label {font-family: monospace;font-weight: bold;background-color: white;display: inline-block;line-height: 1.2em;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-label-container {position: relative;z-index: 2;text-align: center;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-9c18be37-780d-4848-b914-3da7b75ae08b div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-9c18be37-780d-4848-b914-3da7b75ae08b\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>Pipeline(steps=[(&#x27;countvectorizer&#x27;, CountVectorizer()), (&#x27;svc&#x27;, SVC())])</pre><b>Please rerun this cell to show the HTML repr or trust the notebook.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"aa045c63-481e-4e23-a0d3-4a5e20fe5b6b\" type=\"checkbox\" ><label for=\"aa045c63-481e-4e23-a0d3-4a5e20fe5b6b\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">Pipeline</label><div class=\"sk-toggleable__content\"><pre>Pipeline(steps=[(&#x27;countvectorizer&#x27;, CountVectorizer()), (&#x27;svc&#x27;, SVC())])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"30f04f5b-dfbf-4ea7-900f-aca948cd2cd3\" type=\"checkbox\" ><label for=\"30f04f5b-dfbf-4ea7-900f-aca948cd2cd3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">CountVectorizer</label><div class=\"sk-toggleable__content\"><pre>CountVectorizer()</pre></div></div></div><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"f555fe3f-a75c-4e4b-8eb4-6f932017d6ca\" type=\"checkbox\" ><label for=\"f555fe3f-a75c-4e4b-8eb4-6f932017d6ca\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SVC</label><div class=\"sk-toggleable__content\"><pre>SVC()</pre></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "Pipeline(steps=[('countvectorizer', CountVectorizer()), ('svc', SVC())])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8125"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipe.score(X_test, y_test)"
    ]
