Improve assignment 1 clarity

--- a/assignments/assignment1/assignment1.ipynb
+++ b/assignments/assignment1/assignment1.ipynb
@@ -465,7 +465,7 @@
     "import altair as alt\n",
     "\n",
     "alt.Chart(train_df.sort_values(by='target')).mark_bar(opacity=0.6).encode(\n",
-    "    alt.X(alt.repeat(), bin=alt.Bin(maxbins=50)),\n",
+    "    alt.X(alt.repeat(), type='quantitative', bin=alt.Bin(maxbins=50)),\n",
     "    alt.Y('count()', stack=None),\n",
     "    alt.Color('target:N')\n",
     ").properties(\n",
@@ -734,7 +734,6 @@
     "- Read through your solutions\n",
     "- **Restart your kernel and clear output and rerun your cells from top to bottom** \n",
     "- Makes sure that none of your code is broken \n",
-    "- Verify that the tests from the questions you answered have obtained the output \"Success\"\n",
     "- Convert your notebook to .html format by going to File -> Export Notebook As... -> Export Notebook to HTML\n",
     "- Upload your `.ipynb` file and the `.html` file to Canvas under Assignment1. \n",
     "- **DO NOT** upload any `.csv` files. "
@@ -752,9 +751,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:bait]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-bait-py"
   },
   "language_info": {
    "codemirror_mode": {
