Clarify assignment 2 and fix formatting

--- a/assignments/assignment2/assignment2.ipynb
+++ b/assignments/assignment2/assignment2.ipynb
@@ -196,9 +196,8 @@
     "<div class=\"alert alert-info\" style=\"color:black\">\n",
     "    \n",
     "Use `.describe()` to show summary statistics of each feature in the `train_df_nan` dataframe.\n",
-    "Show numerical and categorical columns separately,\n",
-    "either using the lists we created above,\n",
-    "or by reading the docstring to describe to figure out how to limit which column types are shown.\n",
+    "Figure out how to show numerical and categorical columns separately\n",
+    "by reading the `describe` docstring to figure out which parameter to use.\n",
     "\n",
     "</div>"
    ]
@@ -529,7 +528,8 @@
     "Create a column transformer that applies our numeric pipeline transformations to the numeric feature columns\n",
     "and our categorical pipeline transformations to the categorical feature columns.\n",
     "Assign this columns transformer to the variable `preprocessor`.\n",
-    "<div>"
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -550,9 +550,7 @@
    },
    "source": [
     "## Exercise 3: Building a Model <a name=\"4\"></a>\n",
-    "<hr>\n",
-    "\n",
-    "Now that we have preprocessed features, we are ready to build models. "
+    "<hr>"
    ]
   },
   {
