Recommend altair_saver to get all the packages instead of just altair

--- a/lectures/lecture1.ipynb
+++ b/lectures/lecture1.ipynb
@@ -75,10 +75,10 @@
     "- In this course we be using Python and Jupyter notebooks for lectures as well as assignments. \n",
     "- I recommend using the [Miniconda distribution](https://docs.conda.io/en/latest/miniconda.html) to install and manage your Python package installations, but you are free to use either Anaconda or pip if you prefer that.\n",
     "- If you are using Miniconda or Anaconda, you can install a few key packages we will be using in the course, by typing the following at the command line (the \"Anaconda prompt\" on Windows, and the default terminal application on MacOS/Linux):\n",
-    "    > `conda install xgboost jupyter altair seaborn`\n",
+    "    > `conda install xgboost jupyter altair_saver seaborn`\n",
     "\n",
     "- Otherwise you can use pip and type the following at the command line: \n",
-    "    > `pip install xgboost jupyter altair seaborn`\n",
+    "    > `pip install xgboost jupyter altair_saver seaborn`\n",
     "\n",
     "- Some packages that we will make heavy use of are installed together with the packages above, most notably `pandas`, `numpy`, `matplotlib`, and `scikit-learn`.\n",
     "\n",
